# context-realm

./: .env.example  .gitignore  Caddyfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: .gitkeep  test.yml
config/: litellm_config.yaml
docker/mem0-server/: .gitkeep  Dockerfile  patch3.py
docker/postgres/initdb/: 01-create-databases.sql
docs/: architecture.md  contributing.md  setup.md
helm/templates/: .gitkeep
mcp_server/: Dockerfile  __init__.py  mem0_client.py  requirements.txt  server.py
mcp_server/tests/: conftest.py  test_mem0_client.py  test_server.py
pipeline/: .gitkeep  Dockerfile  mem0_filter.py  requirements.txt
scripts/: .gitkeep  caddy-entrypoint.sh  import_context.py  init-realm.sh  requirements.txt  setup.sh  test.sh
scripts/tests/: test_caddy_entrypoint.py  test_init_realm.py
tests/: __init__.py  conftest.py
tests/helpers/: __init__.py  mem0_client.py
tests/integration/: __init__.py  conftest.py  test_mcp_server.py  test_mem0_memories.py
tests/unit/: __init__.py  test_import_context.py  test_mem0_filter.py  test_smoke.py
