# =============================================================================
# pyproject.toml — single source of truth for tool config
# =============================================================================
# Keeping every linter/formatter/test setting in this file means
# `pip install -r requirements-dev.txt && ruff check . && pytest` is the
# only command needed for a clean local run.
# =============================================================================

[project]
name = "context-realm"
version = "0.1.0"
description = "A self-hosted, private AI knowledge engine. Each instance is a Realm — a contained knowledge universe for a person, project, or fictional world."
requires-python = ">=3.11"

# ─── Pytest ──────────────────────────────────────────────────────────────────
# Conventions:
#   * Unit tests live in tests/unit/  — no external services, run on every PR.
#   * Integration tests live in tests/integration/ — require the Docker stack.
#     They are skipped by default and run with `pytest --integration` or
#     `bash scripts/test.sh --integration`.
#   * Component-scoped tests live alongside the component (e.g. mcp_server/tests/).
#     Same conventions apply: pure-Python unit tests only, no live services.
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests", "mcp_server/tests", "scripts/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    # Skip the integration suite by default. The `integration` opt-in is
    # applied via the `-m` flag in scripts/test.sh and the CI workflow.
    "-m", "not integration",
]
markers = [
    "integration: hits live services (Mem0, Ollama, Postgres, Neo4j). Skip unless the Docker stack is up.",
    "slow: tests that take > 5s. Useful for triage, not for the default run.",
]
filterwarnings = [
    # The Mem0 client lives in our tree and may emit noisy third-party warnings.
    "ignore::DeprecationWarning",
]

# ─── Ruff ────────────────────────────────────────────────────────────────────
# Line length 100 mirrors the contributing guide. Keep rule set minimal so
# the linter stays a quick local check rather than a debate topic.
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "helm", "docker/postgres", "docs"]

[tool.ruff.lint]
# A pragmatic default set. Add per-file overrides below as needed.
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501", # line length is handled by the formatter
    "B008", # FastAPI/Pydantic patterns trigger this in some files
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]  # `assert False` is legitimate in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
